--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>WikiSeconde - Lylou</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="style-Lylou.css" />
+  <link rel="stylesheet" href="Style-Lylou.css" />
  </head>
   <body>
 
