--- a/index.html
+++ b/index.html
@@ -45,5 +45,5 @@
  <p>Cette grande michto tient un compte instagram de façon quotidien, elle y met des photos d'elle.
  </p>
  </section>
- <body>
+ </body>
 </html>
